--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"compileScss": "sass --no-source-map src/:build/ -q",
 		"moveFiles": "copy-and-watch src/**/*.{html,json,png,jpg,jpeg} src/**/{fonts,images}/* build",
 		"host": "http-server ./build -p 4280 -d false -s",
-		"test": "\"concurrently \"npm run moveFiles -- --watch\" \"npm run compileScss -- --watch\" \"tsc -w -q\" \"echo Page is avaliable under http://localhost:4280/\""
+		"test": "\"concurrently \"npm run moveFiles -- --watch\" \"npm run compileScss -- --watch\" \"tsc -w\" \"npm run host\" \"echo Page is avaliable under http://localhost:4280/\""
 	},
 	"author": "",
 	"license": "ISC",
@@ -17,6 +17,7 @@
 		"copy-and-watch": "^0.1.5",
 		"http-server": "^0.12.3",
 		"sass": "^1.26.10",
-		"typescript": "^4.0.2"
+		"typescript": "^4.0.2",
+		"concurrently": "^6.0.0"
 	}
 }
